--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ fastapi
 uvicorn[standard]
 pydantic
 boto3
+sqlalchemy
+psycopg2-binary
+python-dotenv
+psycopg2-binary
+python-jose[cryptography]
+passlib[bcrypt]
+python-dotenv
+python-multipart
+pydantic[email]
